Rename package Remove peerDependency whitelisting that didn't work

--- a/package.json
+++ b/package.json
@@ -6,20 +6,13 @@
   },
   "main": "/index.js",
   "devDependencies": {},
-  "name": "vy6j3f",
-  "description": null,
+  "name": "reacttutorialdone",
+  "description": "",
   "version": "0.0.0",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "pnpm": {
-    "peerDependencies": {
-      "allowedVersions": {
-        "typescript": "5^"
-      }
-    }
   }
 }
