--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint .",
     "format": "prettier --config .prettierrc . --write"
   },
   "eslintConfig": {
@@ -33,13 +33,15 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "@types/node": "^20.8.6",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.13",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
-    "prettier": "2.8.8"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "prettier": "2.8.8",
+    "typescript": "^5.2.2"
   }
 }
