Enforce no null with ESLint

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
       "jsx": true
     }
   },
-  "plugins": ["@typescript-eslint", "react"],
+  "plugins": ["@typescript-eslint", "no-null", "react"],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
@@ -16,7 +16,8 @@
   ],
   "rules": {
     "react/jsx-uses-react": "error",
-    "react/jsx-uses-vars": "error"
+    "react/jsx-uses-vars": "error",
+    "no-null/no-null": "error"
   },
   "settings": {
     "react": {
