--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "eslint . && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
@@ -40,6 +40,7 @@
     "@typescript-eslint/parser": "^6.7.5",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-no-null": "^1.0.2",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "2.8.8",
     "typescript": "^5.2.2"
