Downgrade no-unused-vars to eslint warning

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,7 +17,8 @@
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "no-null/no-null": "error"
+    "no-null/no-null": "error",
+    "@typescript-eslint/no-unused-vars": "warn"
   },
   "settings": {
     "react": {
