--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react-scripts": "^5.0.1"
   },
   "scripts": {
-    "start": "eslint . && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
